After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762076 - Can't open file search result in Nautilus
Can't open file search result in Nautilus
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.19.x
Other Linux
: Normal normal
: 3.20
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-15 12:38 UTC by adria.arrufat
Modified: 2016-03-03 15:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
general: allow to search from any part of the stack (7.14 KB, patch)
2016-03-03 15:46 UTC, Carlos Soriano
none Details | Review
shell-search-provider: make it work again (1.55 KB, patch)
2016-03-03 15:46 UTC, Carlos Soriano
none Details | Review
shell-search-provider: don't crash if file doesn't have path (1.39 KB, patch)
2016-03-03 15:50 UTC, Carlos Soriano
committed Details | Review
application: update modeline (747 bytes, patch)
2016-03-03 15:50 UTC, Carlos Soriano
committed Details | Review
application: return the recent created window in open window (1.04 KB, patch)
2016-03-03 15:50 UTC, Carlos Soriano
committed Details | Review
window-slot: remove unused priv var (764 bytes, patch)
2016-03-03 15:50 UTC, Carlos Soriano
committed Details | Review
general: allow to search from any part of the stack (7.14 KB, patch)
2016-03-03 15:50 UTC, Carlos Soriano
committed Details | Review
shell-search-provider: make it work again (1.55 KB, patch)
2016-03-03 15:50 UTC, Carlos Soriano
committed Details | Review

Description adria.arrufat 2016-02-15 12:38:13 UTC
Hi, I've been experiencing this problem for a while.

Whenever I search for a file using Gnome shell and I get the list of results of Nautilus (grouped in the File search represented with the Nautilus icon), nothing happens if I click on the Nautilus icon that has an overlay '+'.

If I recall correctly, clicking on that icon should open Nautilus with the search query on the shell, but it doesn't.
However, clicking on the particular file works.

Thanks in advance.
Comment 1 Florian Müllner 2016-02-15 13:07:28 UTC
I can reproduce this, however
 (1) other search providers work here
 (2) it also happens when calling
     gdbus call --session --dest org.gnome.Nautilus \
                --object-path /org/gnome/Nautilus/SearchProvider \
                --method org.gnome.Shell.SearchProvider2.LaunchSearch '["des"]' 0
     manually

So this looks like a nautilus issue, reassigning.
Comment 2 Carlos Soriano 2016-03-03 15:46:05 UTC
Created attachment 322990 [details] [review]
general: allow to search from any part of the stack

Expose the search function on the whole stack.

We will need it for searches from the gnome-shell provider.
Comment 3 Carlos Soriano 2016-03-03 15:46:10 UTC
Created attachment 322991 [details] [review]
shell-search-provider: make it work again

We removed the search action with a rework on the whole handling
of views/slots/search-query handling to decouple the code better
and not expose API that is not needed outside.

The problem is that we actually needed a way to search from the
application, since gnome-shell search provider communicates in that way.

However we missed this since it was just an action in the application,
which made us don't catch this.

Now we allow a search in the whole stack but in a cleaner and direct
way to not be in the same situation in the future.

This patch use that to make the shell search provider work again.
Comment 4 Carlos Soriano 2016-03-03 15:50:22 UTC
Created attachment 322993 [details] [review]
shell-search-provider: don't crash if file doesn't have path

Some backends doesn't support g_file_get_path, like the trash backends,
and we were crashing trying to create a description with a NULL path.

For those, just use the uri as a description.
Comment 5 Carlos Soriano 2016-03-03 15:50:27 UTC
Created attachment 322994 [details] [review]
application: update modeline
Comment 6 Carlos Soriano 2016-03-03 15:50:33 UTC
Created attachment 322995 [details] [review]
application: return the recent created window in open window

We will need it in an upcoming patch.
Comment 7 Carlos Soriano 2016-03-03 15:50:38 UTC
Created attachment 322996 [details] [review]
window-slot: remove unused priv var
Comment 8 Carlos Soriano 2016-03-03 15:50:44 UTC
Created attachment 322997 [details] [review]
general: allow to search from any part of the stack

Expose the search function on the whole stack.

We will need it for searches from the gnome-shell provider.
Comment 9 Carlos Soriano 2016-03-03 15:50:55 UTC
Created attachment 322998 [details] [review]
shell-search-provider: make it work again

We removed the search action with a rework on the whole handling
of views/slots/search-query handling to decouple the code better
and not expose API that is not needed outside.

The problem is that we actually needed a way to search from the
application, since gnome-shell search provider communicates in that way.

However we missed this since it was just an action in the application,
which made us don't catch this.

Now we allow a search in the whole stack but in a cleaner and direct
way to not be in the same situation in the future.

This patch use that to make the shell search provider work again.
Comment 10 Carlos Soriano 2016-03-03 15:53:43 UTC
Attachment 322993 [details] pushed as f79bed6 - shell-search-provider: don't crash if file doesn't have path
Attachment 322994 [details] pushed as c8696c4 - application: update modeline
Attachment 322995 [details] pushed as 01ad6bb - application: return the recent created window in open window
Attachment 322996 [details] pushed as 180461a - window-slot: remove unused priv var
Attachment 322997 [details] pushed as 24de92b - general: allow to search from any part of the stack
Attachment 322998 [details] pushed as c07ff45 - shell-search-provider: make it work again