shell-search-provider: don't crash if file doesn't have path

Some backends doesn't support g_file_get_path, like the trash backends,
and we were crashing trying to create a description with a NULL path.

For those, just use the uri as a description.

https://bugzilla.gnome.org/show_bug.cgi?id=762076